@@ -1,2 +1,21 @@
 # TeamProjectQuiz
 TeamProjectMillionaire
+
+If you get the Error: JavaFX runtime components are missing, and are required to run this application
+
+    You need to:
+    1. Download JavaFX Windows x64 SDK Version 15.0.1 (from https://gluonhq.com/products/javafx/)"
+    2. Unzip to a location u find easily
+    3. In Intellij on the top Right > Main > Edit Configuration > VM Options
+    4. Enter this line with YOUR file path to the unziped file:
+    5. --module-path "C:\Program Files\JetBrains\javafx-sdk-15.0.1\lib" --add-modules=javafx.controls,javafx.fxml
+    6. Apply changes
+
+    Official Tutorial: https://www.jetbrains.com/help/idea/javafx.html
+    
+    
+Team_QnA.txt are placeholder Questions.
+
+You can add your own Questions, but you have to use the correct format:
+
+Question#rightAnswer#wrongAnswer1#wrongAnswer2#wrongAnswer3
